--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,7 @@ td, th {
 
 .form_submit {
   margin-top: 17px;
+  margin-bottom: 30px;
 }
 
 body { 
@@ -26,11 +27,12 @@ body {
 }
 
 .back {
-  background-color: #E0E0E0;
+  background-color: WHITE;
 }
 
 body {
   background-color: #265a88;
+  color: white;
 }
 
 .dir {
@@ -51,8 +53,59 @@ body {
   border: 1px solid black;
   padding: 0;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  &:hover{
+  margin-bottom: 20px;
+  &:hover {
     border: 1px solid black;
     padding: 0;
+  }
+}
+
+.btn-list {
+  margin-bottom: 20px;
+  height: 100px;
+  // line-height: 100px;
+  font-size: 18px;
+  font-weight: bold;
+  border: 1px solid black;
+  padding: 0;
+  padding-top: 38px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  &:hover {
+    border: 1px solid black;
+    padding: 0;
+    padding-top: 38px;
+  }
+}
+
+.btn-pad1{
+  padding-top: 11px;
+  &:hover {
+    padding-top: 11px;
+  }
+}
+
+.btn-pad2{
+  padding-top: 25px;
+  &:hover {
+    padding-top: 25px;
+  }
+}
+
+.search_form{
+  text-align: center;
+}
+
+.form-text{
+  color: white;
+}
+
+.tabela {
+  // background-color: white;
+}
+
+.lista-mot{
+  a{
+    color: white;
+    text-decoration: none;
   }
 }
