--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,7 @@
   <body>
     
     <%= render 'layouts/header' %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <% flash.each do |message_type, message| %>
-            <div class="alert alert-<%= message_type %>" style="text-align: center;"><%= message %></div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <div class="container" style="margin-top: 10%;">
+    <div class = "container-fluid">
       <%= yield %>
     </div>
 
