--- a/app/views/motoristas/edit.html.erb
+++ b/app/views/motoristas/edit.html.erb
@@ -16,11 +16,11 @@
       <%= f.label :cargo, "Cargo", class: 'form_label' %>
       <%= f.text_field :cargo, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:cargo).to_sentence %>
       
-      <%= f.label :data_posse, "Data do Termo de Posse", class: 'form_label' %>
+      <%= f.label :data_posse, "Data de Admissão", class: 'form_label' %>
       <%= f.date_select(:data_posse, {start_year: 1900, include_blank: true}, {class: 'form-control formulario', style: 'width: auto; display: inline;'}) %>
       
       <%= f.label :secao_original, "Chapeira", class: 'form_label' %>
-      <%= f.select(:secao_original, @secoes, {:prompt => @motorista.errors.full_messages_for(:secao_original).to_sentence}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:secao_original, @chapeiras, {:prompt => @motorista.errors.full_messages_for(:secao_original).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :secao_atual, "Seção Atual", class: 'form_label' %>
       <%= f.select(:secao_atual, @secoes, {:prompt => @motorista.errors.full_messages_for(:secao_atual).to_sentence}, {:class => 'form-control formulario'}) %>
@@ -29,7 +29,7 @@
       <%= f.text_field :pontuacao, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:pontuacao).to_sentence %>
       
       <%= f.label :local, "Local", class: 'form_label' %>
-      <%= f.select(:local, [["TRAF. V. MARIAN."],["TRAF. V. GUILH."],["Outras Áreas"],["RECORPS"],["Não Localizado"]], {:prompt => @motorista.errors.full_messages_for(:local).to_sentence}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:local, [["TRAF. V. MARIAN."],["TRAF. V. GUILH."],["Outras Áreas"],["RECORPS"],["Chapeiras Diversas"]], {:prompt => @motorista.errors.full_messages_for(:local).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :status, "Status", class: 'form_label' %>
       <%= f.select(:status, [["Ativo"],["Licença Médica"],["Processo Administrativo de Falta"],["Aposentado"],["Readaptado"]], {:prompt => @motorista.errors.full_messages_for(:status).to_sentence}, {:class => 'form-control formulario'}) %>
