--- a/app/views/motoristas/new.html.erb
+++ b/app/views/motoristas/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row form-text">
   <div class="col-md-4 col-md-offset-4">
     
     <h1 style="text-align: center;">Registrar Motorista</h1>
@@ -16,11 +16,11 @@
       <%= f.label :cargo, "Cargo", class: 'form_label' %>
       <%= f.text_field :cargo, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:cargo).to_sentence %>
       
-      <%= f.label :data_posse, "Data do Termo de Posse", class: 'form_label' %>
+      <%= f.label :data_posse, "Data de Admissão", class: 'form_label' %>
       <%= f.date_select(:data_posse, {start_year: 1900, include_blank: true}, {class: 'form-control formulario', style: 'width: auto; display: inline;'}) %>
       
       <%= f.label :secao_original, "Chapeira", class: 'form_label' %>
-      <%= f.select(:secao_original, [['17'],['0']], {:prompt => @motorista.errors.full_messages_for(:secao_original).to_sentence}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:secao_original, @chapeiras, {:prompt => @motorista.errors.full_messages_for(:secao_original).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :secao_atual, "Seção Atual", class: 'form_label' %>
       <%= f.select(:secao_atual, @secoes, {:prompt => @motorista.errors.full_messages_for(:secao_atual).to_sentence}, {:class => 'form-control formulario'}) %>
