--- a/app/views/pages/buscar_motoristas.html.erb
+++ b/app/views/pages/buscar_motoristas.html.erb
@@ -8,3 +8,12 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row" style="margin-top: 20px;">
+    <div class="col-md-6 col-md-offset-3">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>" style="text-align: center;"><%= message %></div>
+      <% end %>
+    </div>
+  </div>
+</div>
