--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,12 +16,14 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-2">
-    <%= link_to "Gerar Relatório", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
-  </div>
-  <div class="col-md-4">
-    <%= link_to "Resto", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
+<div class="container" style="margin-top: 10%;">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-2">
+      <%= link_to "Gerar Relatório", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
+    </div>
+    <div class="col-md-4">
+      <%= link_to "Consultar Motoristas", consultar_motoristas_path, class: "btn btn-block btn-primary btn-size" %>
+    </div>
   </div>
 </div>
 
