--- a/app/views/listas/geral.html.erb
+++ b/app/views/listas/geral.html.erb
@@ -1,6 +1,6 @@
 <h1>Motoristas - Geral</h1>
-<%= link_to "Ordenar por Idade", geral_idade_path, class: "btn btn-default" %>
-<%= link_to "Ordenar por Tempo de Contribuição", geral_contribuicao_path, class: "btn btn-default" %>
+<%= link_to "Ordenar por Idade", geral_idade_path, class: "btn btn-default noPrint" %>
+<%= link_to "Ordenar por Tempo de Contribuição", geral_contribuicao_path, class: "btn btn-default noPrint" %>
 <h3>Vila Mariana</h3>
 <%= render 'layouts/lista', object: @vila_mariana %>
 <h3>Vila Guilherme</h3>
