--- a/app/views/listas/geral_idade.html.erb
+++ b/app/views/listas/geral_idade.html.erb
@@ -1,5 +1,5 @@
 <h1>Motoristas - Geral - Ordenado por Idade</h1>
-<%= link_to "Voltar", geral_path, class: "btn btn-default" %>
+<%= link_to "Voltar", geral_path, class: "btn btn-default noPrint" %>
 <h3>Vila Mariana</h3>
 <%= render 'layouts/lista', object: @vila_mariana %>
 <h3>Vila Guilherme</h3>
