--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -1,5 +1,7 @@
 <div style="color: white; font-weight: bold">
+  <div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
   <h1 style="text-align: center; margin-bottom: 40px; color: white;">Relatório</h1>
+  <h3 style="text-align: center; margin-bottom: 40px; color: white;">Gerado em <%= Time.now.strftime("%d/%m/%Y") %> </h3>
   <div class="row" style="margin-top: 50px">
     <div class="col-md-4 col-md-offset-4">
       <div class="tabela">
