--- a/app/views/listas/outras_areas.html.erb
+++ b/app/views/listas/outras_areas.html.erb
@@ -1,3 +1,3 @@
 <h1>Motoristas - Outras Áreas</h1>
-<%= link_to "Filtrar por Seção Atual", outras_areas_filtrado_path, class: "btn btn-default" %>
+<%= link_to "Filtrar por Seção Atual", outras_areas_filtrado_path, class: "btn btn-default noPrint" %>
 <%= render 'layouts/lista', object: @motoristas %>
