--- a/app/views/listas/outras_areas_filtrado.html.erb
+++ b/app/views/listas/outras_areas_filtrado.html.erb
@@ -1,5 +1,5 @@
 <h1>Motoristas - Outras Áreas Filtrado</h1>
-<%= link_to "Voltar", outras_areas_path, class: "btn btn-default" %>
+<%= link_to "Voltar", outras_areas_path, class: "btn btn-default noPrint" %>
 <% @secoes.each do |s| %>
   <% if !s.blank? %>
     <h3><%= s.first.secao_atual %></h3>
