--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
       </ul>
     <% else %>
       <ul class="nav navbar-nav navbar-left">
-        <li><a href"#">Motoristas</a></li>
+        <li style="font-weight: bold;"><a href"#" style="color: white;">MOTORISTAS</a></li>
       </ul>
     <% end %>
   </div>
