--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
     
     <div class="noPrint" style="margin-bottom: 70px"><%= render 'layouts/header' %></div>
     
+    <div class="noPrint">
+      <% if logged_in? %>
+        <ol class="breadcrumb" style="color: black">
+          <%= render_breadcrumbs :tag => :li, :separator => "" %>
+        </ol>
+      <% end %>
+    </div>
+    
     <% if params[:controller] == "listas" || params[:action] == "relatorio" || params[:action] == "show"%>
       <a class="btn btn-default noPrint" style="position: absolute; right: 0px; margin-right: 10px" href="#" onclick="window.print();return false;">Imprimir Página</a>
     <% end %>
