--- a/app/views/motoristas/new.html.erb
+++ b/app/views/motoristas/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row form-text">
   <div class="col-md-4 col-md-offset-4">
     
-    <h1 style="text-align: center;">Registrar Motorista</h1>
+    <h1 style="text-align: center;">Cadastrar Motorista</h1>
     
     <%= form_for(@motorista) do |f| %>
       <%= f.label :nome, "Nome", class: 'form_label' %>
