--- a/app/views/listas/aposentados.html.erb
+++ b/app/views/listas/aposentados.html.erb
@@ -1,2 +1,3 @@
+<div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
 <h1>Motoristas - Aposentados</h1>
 <%= render 'layouts/lista', object: @motoristas %>
