--- a/app/views/listas/geral.html.erb
+++ b/app/views/listas/geral.html.erb
@@ -1,3 +1,4 @@
+<div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
 <h1>Motoristas - Geral</h1>
 <%= link_to "Ordenar por Idade", geral_idade_path, class: "btn btn-default noPrint" %>
 <%= link_to "Ordenar por Tempo de Contribuição", geral_contribuicao_path, class: "btn btn-default noPrint" %>
