--- a/app/views/listas/geral_idade.html.erb
+++ b/app/views/listas/geral_idade.html.erb
@@ -1,3 +1,4 @@
+<div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
 <h1>Motoristas - Geral - Ordenado por Idade</h1>
 <%= link_to "Voltar", geral_path, class: "btn btn-default noPrint" %>
 <h3>Vila Mariana</h3>
