--- a/app/views/listas/outras_areas.html.erb
+++ b/app/views/listas/outras_areas.html.erb
@@ -1,3 +1,4 @@
+<div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
 <h1>Motoristas - Outras Áreas</h1>
 <%= link_to "Filtrar por Seção Atual", outras_areas_filtrado_path, class: "btn btn-default noPrint" %>
 <%= render 'layouts/lista', object: @motoristas %>
