--- a/app/views/listas/outras_areas_filtrado.html.erb
+++ b/app/views/listas/outras_areas_filtrado.html.erb
@@ -1,3 +1,4 @@
+<div class="justPrint" style="text-align: center;"><%= image_tag("LogoPrefeitura.jpg", alt: "Prefeitura de São Paulo") %></div>
 <h1>Motoristas - Outras Áreas Filtrado</h1>
 <%= link_to "Voltar", outras_areas_path, class: "btn btn-default noPrint" %>
 <% @secoes.each do |s| %>
