--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -103,6 +103,10 @@
               <th class="esq">Servidores prestando serviço em RECORPS</th>
               <td>-<%= @recorps %></td>
             </tr>
+            <tr>
+              <th class="esq">Licença Médica</th>
+              <td>-<%= @licenca_medica %></td>
+            </tr>
             <tr class="back">
               <th style="color: black;">Total de Motoristas Efetivos</th>
               <th style="color: black;"><%= @total %></th>
