--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<%= link_to "Cadastrar novo usuário", signup_path, class: "btn btn-default noPrint cadastrar" %>
+<% if current_user.rf == '28041' %>
+  <%= link_to "Cadastrar novo usuário", signup_path, class: "btn btn-default noPrint cadastrar" %>
+<% end %>
 <div class="container" style="margin-top: 10%;">
   <div class="row">
     <div class="col-md-4 col-md-offset-2">
