--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,10 +3,16 @@
     
     <h1 style="text-align: center;">Cadastrar Usuário</h1>
     
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user) do |f| %>      
+    
+      <%= f.label :nome, "Nome", class: 'form_label' %>
+      <%= f.text_field :nome, class: 'form-control formulario', :placeholder => @user.errors.full_messages_for(:nome).to_sentence %>
       
       <%= f.label :rf, "RF", class: 'form_label' %>
       <%= f.text_field :rf, maxlength: 7, class: 'form-control formulario', :placeholder => @user.errors.full_messages_for(:rf).to_sentence %>
+      
+      <%= f.label :tipo, "Tipo do usuário", class: 'form_label' %>
+      <%= f.select(:tipo, array_tipos, {:prompt => @user.errors.full_messages_for(:tipo).to_sentence}, {:class => 'form-control formulario'}) %>
 
       <%= f.label :password, "Senha", class: 'form_label' %>
       <%= f.password_field :password, class: 'form-control formulario', :placeholder => @user.errors.full_messages_for(:password).to_sentence %>
