Terminar funcoes especificas para cada tipo de usuario

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       </ul>
     <% else %>
       <ul class="nav navbar-nav navbar-left">
-        <li style="font-weight: bold;"><a href"#" style="color: white;">MOTORISTAS</a></li>
+        <li style="font-weight: bold;"><a href"#" style="color: white;">S I K O N</a></li>
       </ul>
     <% end %>
   </div>
